syntax = "proto3";
package pl.com.psl.spring.grpc.server.invoice;
option java_multiple_files = true;

message InvoiceProcessResponse {
    int32 id = 1;
    string name = 2;
    string status = 3;
}

message InvoiceProcessRequest {
    int32 id = 1;
}

service InvoiceProcessor {
    rpc processInvoice(InvoiceProcessRequest) returns (InvoiceProcessResponse);
}
